--- a/.env.example
+++ b/.env.example
@@ -9,9 +9,9 @@ LOG_CHANNEL=daily
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=dhanyoga
+DB_USERNAME=chandan
+DB_PASSWORD=chandant225
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
